# RTv1

./: ._minilibx  CMakeLists.txt  RTv1  RTv1-lmlx  RTv1.h  Test  a.out  alloc_cone.c  alloc_cyl.c  alloc_init_sphere.c  alloc_plane.c  alloc_ray.c  init_file.c  main.c  parse.c
libft/: ._Makefile  ._ft_memmove.c  ._ft_strjoin.c  ._ft_strlcat.c  ._ft_strsplit.c  ._libft.h
minilibx/: ._Makefile  .__README_  ._font.c  ._font.xcf  ._man  ._mlx.h  ._mlx_init_loop.m  ._mlx_int.h  ._mlx_int_str_to_wordtab.c  ._mlx_new_image.m  ._mlx_new_window.h  ._mlx_new_window.m  ._mlx_rgb.c  ._mlx_shaders.c  ._mlx_xpm.c
minilibx/man/: ._man3
minilibx/man/man3/: ._mlx.1  ._mlx_loop.1  ._mlx_new_image.1  ._mlx_new_window.1  ._mlx_pixel_put.1
